style/style.css
@import url("fonts.css");

* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}

body {
  font-family: "franklin", "Times New Roman", Georgia, Times, sans-serif;
  color: #333;
}

button {
  cursor: pointer;
  text-transform: uppercase;
}

a {
  color: black;
  text-decoration: none;
}

.header-nav {
  position: fixed;
  width: 100%;
  background-color: #fff;
  border-bottom: 1px solid #e2e2e2;
}

.nav {
  display: flex;
  justify-content: space-between;
  align-items: center;
  /* max-width: 1605px; */
  padding: 4px 15px;
}

.btn {
  background-color: #fff;
  border: none;
  margin-right: 8px;
  padding: 8px 9px 9px;
}

.svg {
  display: inline-block;
  height: 16px;
  vertical-align: sub;
  width: 16px;
}

.search-btn {
  margin: 0;
}

.space-link {
  text-transform: uppercase;
  font-family: "franklin", Helvetica, Arial, sans-serif;
  font-size: 14.25px;
  font-weight: 700;
  letter-spacing: 0.7px;
  line-height: 19px;
  left: 105px;
  position: absolute;
  top: 10px;
}

.space-a:hover {
  text-decoration: underline;
}

.nyt-logo {
  display: block;
  width: 195px;
  height: 26px;
  text-size-adjust: 100%;
  margin-top: 6px;
  margin-left: 105px;
}

.btn-nav {
  padding: 10px 12px;
  border-radius: 3px;
  font-family: "franklin", Helvetica, arial, sans-serif;
  white-space: nowrap;
  background: #567b95;
  border: 1px solid #326891;
  color: #fff;
  font-size: 11px;
  line-height: 11px;
  letter-spacing: 0.05em;
  transition: ease 0.6s;
  vertical-align: middle;
  margin-right: 7px;
}

.btn-nav:hover {
  background: #326891;
}

.main {
  display: flex;
  justify-content: center;
  padding-top: 40px;
}

.article-wrapper {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
}

.article-header {
  margin-top: 3.75em;
}

.article-title {
  color: #121212;
  font-family: "cheltenham", Georgia, "Times New Roman", sans-serif;
  font-size: 2.5rem;
  line-height: 3rem;
  max-width: 600px;
  margin: 0 20px 20px;
}

.icons {
  display: flex;
  max-width: 600px;
  padding-top: 20px;
  border-top: 1px solid #ebebeb;
}

.icon-share {
  display: flex;
  align-items: center;
  list-style: none;
  margin-bottom: 5px;
  font-family: "franklin", Helvetica, Arial, sans-serif;
}

.icons-a {
  background: #999;
  margin-right: 16px;
  border-radius: 50%;
  width: 100%;
  font-size: 15px;
  cursor: pointer;
}

.icons-a i {
  padding: 5px;
  background: #eee;
  border-radius: 100%;
}

.icons-b {
  margin-right: 16px;
  cursor: pointer;
}

.comments-icon {
  margin-right: 0;
}

.comment-btn {
  display: inline-flex;
  flex-direction: column;
  font-family: "franklin-n", Helvetica, Arial, sans-serif;
  font-weight: 500;
  font-size: 0.75rem;
  background-color: transparent;
  border: none;
  bottom: 0.05rem;
  padding: 0 0 4px;
  margin-left: 2px;
  height: 25px;
  min-width: 24px;
}

.comment-i {
  display: flex;
  -webkit-box-pack: center;
  justify-content: center;
  -webkit-box-align: center;
  align-items: center;
  background: transparent;
  border: 1px solid rgb(102, 102, 102);
  border-radius: 4px;
  min-width: 26px;
  min-height: 14px;
  padding: 8px;
  position: relative;
  width: auto;
}

.comment-i::before {
  border-color: rgb(102, 102, 102) transparent;
  border-style: solid;
  bottom: -7px;
  border-width: 6px 0 0 8px;
  content: "";
  display: block;
  left: 15px;
  position: absolute;
  width: 0px;
}

.comment-text {
  color: black;
  font-style: normal;
  line-height: 0.75rem;
}

.comment-i::after {
  border-color: rgb(255, 255, 255) transparent;
  border-style: solid;
  border-width: 6px 0 0 6px;
  bottom: -6px;
  content: "";
  display: block;
  left: 16px;
  position: absolute;
  width: 0;
}

.img-large {
  margin-top: 25px;
  margin-bottom: 43px;
}

.img {
  width: 945px;
}

.img-caption {
  max-width: 720px;
  color: #666;
  font-family: "imperial", Georgia, "Times New Roman", Times, serif;
  margin: 10px 20px 0 0;
  line-height: 1.125rem;
}

.cap-a {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  margin-right: 4px;
}

.cap-b {
  color: #888;
  font-size: 0.8125rem;
}

.byline-timestamp {
  width: 600px;
  margin-bottom: 20px;
  display: flex;
  flex-direction: column;
  color: #333;
}

.by {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: "franklin", Helvetica, Arial, sans-serif;
  margin-bottom: 15px;
}

.timestamp {
  font-family: "franklin-n", helvetica, arial, sans-serif;
  font-size: 0.8125rem;
  line-height: 1;
}

.article-body {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
}

.sign-up-times {
  display: flex;
  overflow: hidden;
  padding-top: 0.75rem;
  border-top: 1px solid rgb(226, 226, 226);
  color: rgb(51, 51, 51);
  max-width: 600px;
  margin: 1.5625rem auto 1rem;
}

.text-box {
  display: inline;
  height: 100%;
  margin-right: 20px;
  text-align: left;
}

.sign-up-bold {
  display: inline;
  font-size: 0.875rem;
  font-family: "franklin", helvetica, arial, sans-serif;
  line-height: 1.125rem;
  letter-spacing: 0.03rem;
  margin: 0;
}

.sign-up-text {
  font-family: "imperial-i", Georgia, "Times New Roman", sans-serif;
  font-size: 1.0625rem;
  line-height: 1.5rem;
  text-align: center;
}

.sign-up-times-btn {
  font-size: 0.9375rem;
  font-family: "franklin", helvetica, arial, sans-serif;
  font-style: normal;
  padding: 4px 12px 6px;
  margin-top: 4px;
  color: black;
  background-color: white;
  border: 1px solid black;
  border-radius: 2px;
  letter-spacing: 0.02rem;
  transition: background-color 0.4s ease 0s, color 0.4s ease 0s;
  white-space: nowrap;
  text-align: center;
  line-height: 1;
  text-transform: none;
  height: 32px;
}

.sign-up-times-btn:hover {
  color: white;
  background-color: black;
}

.para {
  max-width: 600px;
  font-family: "imperial", Georgia, "Times New Roman", Times, serif;
  font-size: 1.25rem;
  line-height: 1.875rem;
  margin-bottom: 0.9375rem;
}

.inline-message {
  text-align: center;
  line-height: 19px;
  display: flex;
  flex-direction: column;
  align-items: center;
  margin: 25px 0;
  font-size: 15px;
}

.top-border,
.bottom-border {
  border-bottom: 1px solid rgb(204, 204, 204);
  width: 72px;
  margin-bottom: 18px;
}

.inline-link {
  color: rgb(50, 104, 145);
}

.bottom-border {
  margin-top: 20px;
}

.para-link {
  color: #326891;
  text-decoration: underline;
  text-decoration-thickness: 1px;
}

.para-link:hover {
  text-decoration: none;
}

.para-bold {
  margin-left: -441px;
}

.theory-iframe {
  width: 945px;
}

.theory {
  position: relative;
  margin-top: 16px;
}

.theory-header {
  margin-bottom: 10px;
}

.story-heading {
  font-family: "cheltenham-n", georgia, "times new roman", times, serif;
  font-size: 1.25rem;
  line-height: 1.5rem;
  margin-bottom: 2px;
  color: black;
}

.summary-text {
  font-size: 0.975rem;
  font-family: "cheltenham-400", Georgia, "Times New Roman", Times, serif;
  color: #666;
  line-height: 1.25rem;
}

.theory-div {
  position: absolute;
  width: 226px;
}

.theory-text {
  font-family: "franklin-300", arial, helvetica, sans-serif;
  font-size: 14px;
  line-height: 17px;
  color: #000;
}

.theory-bold {
  font-family: "franklin", arial, helvetica, sans-serif;
  font-size: 11px;
  letter-spacing: 0.05em;
}

.theory-div-a {
  top: 32.8264%;
  left: 0.0436%;
}

.theory-div-b {
  top: 32.8264%;
  left: 25.5619%;
}

.theory-div-c {
  top: 32.8264%;
  left: 51.08%;
  width: 228px;
}

.theory-div-d {
  top: 32.8264%;
  left: 76.5952%;
  width: 228px;
}

.theory-div-e {
  top: 75.8375%;
  left: 0.0436%;
}

.theory-div-f {
  top: 75.8375%;
  left: 25.5619%;
}

.theory-div-g {
  top: 75.8375%;
  left: 51.08%;
  width: 228px;
}

.theory-div-h {
  top: 75.8375%;
  left: 76.5952%;
  width: 228px;
}

.footer-theory {
  max-width: 945px;
  margin-top: 24px;
}

.footer-theory::before {
  width: 60px;
  content: "";
  height: 1px;
  background-color: #000;
  margin: 0 0 13px;
  display: inline-block;
}

.theory-info {
  font-size: 0.875rem;
  font-family: "franklin-n", helvetica, arial, sans-serif;
  line-height: 1.125rem;
  margin: 0 0 1em;
}

.yt-embed {
  width: 600px;
  margin: 29px auto 43px;
}

.yt-iframe {
  width: 100%;
  height: 319px;
}

.yt-caption,
.bicep2-caption {
  color: #666;
  font-family: "imperial", Georgia, "Times New Roman", Times, serif;
  margin: 10px 20px 0 0;
  line-height: 1.125rem;
}

.yt-cap-a,
.bicep2-cap-a {
  font-size: 0.9375rem;
  line-height: 1.25rem;
}

.yt-cap-b,
.bicep2-cap-b {
  font-size: 0.8125rem;
  line-height: 1.125rem;
  color: #888;
}

.bicep2 {
  max-width: 600px;
  margin: 1.7rem 0;
}

.bicep2-img {
  width: 100%;
}

.bicep2-caption {
  margin-right: 20px;
}

.bottom-of-article {
  font-family: "franklin-n", Arial, Helvetica, sans-serif;
  max-width: 600px;
  margin: 1rem auto 0.75rem;
  color: rgb(102, 102, 102);
}

.bottom-text {
  font-size: 0.75rem;
}

.bottom-link {
  color: rgb(102, 102, 102);
  text-decoration: underline;
}

.bottom-link:hover {
  text-decoration: none;
}

